/**
https://developers.google.com/protocol-buffers/docs/proto3#other
*/

syntax = "proto3";

message Metadata {
    string fileType = 1;
    string createdBy = 2;
    repeated string tags = 3;
}

message FileChunk {
    string id = 1;
    string filename = 2;
    Timestamp uploadDate = 3;
    uint32 chunkSize = 4;
    uint64 length = 5;
    bytes data = 6;
    Metadata metadata = 7;
}

service FileService {
    rpc getFile(string fileName) returns stream (FileChunk) {}

    rpc addFile(stream FileChunk chunk) returns (string) {}
}