syntax = "proto3";

// Common
message Metadata {
  string fileType = 1;
  string createdBy = 2;
  repeated string tags = 3;
}

// Download
message DownloadRequest { string filename = 1; }

message DownloadResult {
  string filename = 1;
  bytes chunk = 2;
}

// Upload
message UploadRequest {
  string filename = 1;
  bytes chunk = 2;
}

message UplpoadResult {}

// Format
message FormatRequest {}

message FormatResult {}

// Services
service FileServer {
  rpc download(DownloadRequest) returns (stream DownloadResult) {}

  rpc upload(stream UploadRequest) returns (UplpoadResult) {}

  rpc formatFileSystem(FormatRequest) returns (FormatResult) {}
}